--- a/Conversa/Conversa.entitlements
+++ b/Conversa/Conversa.entitlements
@@ -4,6 +4,11 @@
 <dict>
 	<key>aps-environment</key>
 	<string>development</string>
+	<key>com.apple.developer.associated-domains</key>
+	<array>
+		<string>applinks:conversa.link</string>
+		<string>applinks:conversa-alternate.link</string>
+	</array>
 	<key>keychain-access-groups</key>
 	<array>
 		<string>$(AppIdentifierPrefix)ee.app.conversa</string>
