Multiple fixes and improvements
* Swift 4 update 
* Added new code for fixed cells in business category views
* Added gray border on chats, search and business categories avatars
* Update YapDatabaseView to YapDatabaseAutoView
* Added favorites view
* Whisper added @objc to methods so they are visible on Objective-C code
* Fabric/Crashlytics integration
* Couple of UI fixes
* Cocoapods libraries updated.

--- a/Conversa/Info.plist
+++ b/Conversa/Info.plist
@@ -44,7 +44,7 @@
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>30</string>
+	<string>32</string>
 	<key>LSApplicationQueriesSchemes</key>
 	<array>
 		<string>googlechromes</string>
@@ -82,6 +82,10 @@
 	<array>
 		<string>armv7</string>
 	</array>
+	<key>UIRequiresFullScreen</key>
+	<false/>
+	<key>UIStatusBarHidden</key>
+	<true/>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
@@ -93,5 +97,19 @@
 		<key>test</key>
 		<string>key_test_jlh0fVE5OwrAI8P2yVGwRagmttb6Hahk</string>
 	</dict>
+    <key>Fabric</key>
+    <dict>
+        <key>APIKey</key>
+        <string>617c5ff8d2055123134c25a4b496d078123ef1da</string>
+        <key>Kits</key>
+        <array>
+            <dict>
+                <key>KitInfo</key>
+                <dict/>
+                <key>KitName</key>
+                <string>Crashlytics</string>
+            </dict>
+        </array>
+    </dict>
 </dict>
 </plist>
